--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
 blinker==1.9.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
 click==8.2.1
+cryptography==45.0.7
+docopt==0.6.2
 Flask==3.1.2
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pillow==11.3.0
+pipreqs==0.4.13
+pycparser==2.23
+pypdfium2==4.30.0
+requests==2.32.5
+urllib3==2.5.0
 Werkzeug==3.1.3
+yarg==0.1.10
